--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -2,29 +2,29 @@
 <%= t('views.shared.add_pin') %>
 <% end %>
 
-<% if params[:store_type].nil? %>
+<% if @pin.type.nil? %>
 <p class="font-s text-muted">
   <%= t('views.pins.add_pin_intro') %>
 </p>
 <% end %>
 
 <%= form_for(@pin, url: pins_path, class: 'mt-5') do |f| %>
-<% if params[:store_type].nil? %>
+<% if @pin.type.nil? %>
 <p>
   <%= t('views.pins.type_intro') %>
 </p>
 
 <div class="form-group">
   <div class="custom-control custom-radio">
-    <%= f.radio_button :store_type, 'community', class: 'custom-control-input', required: true %>
-    <%= f.label :store_type, class: 'custom-control-label', value: 'community' do %>
+    <%= f.radio_button :type, 'Community', class: 'custom-control-input', required: true %>
+    <%= f.label :type, class: 'custom-control-label', value: 'Community' do %>
     <%= t('views.pins.type_community') %> <div class="c-marker marker-sm community-marker"></div>
     <% end %>
   </div>
 
   <div class="custom-control custom-radio">
-    <%= f.radio_button :store_type, 'business', class: 'custom-control-input', required: true %>
-    <%= f.label :store_type, class: 'custom-control-label', value: 'business' do %>
+    <%= f.radio_button :type, 'Enterprise', class: 'custom-control-input', required: true %>
+    <%= f.label :type, class: 'custom-control-label', value: 'Enterprise' do %>
     <%= t('views.pins.type_business') %> <div class="c-marker marker-sm business-marker"></div>
     <% end %>
   </div>
@@ -34,9 +34,11 @@
   <%= f.submit t('views.pins.select_location'), class: 'btn btn-block btn-black' %>
 </div>
 <% else %>
-Hello world!
-<pre>
-<%= params %>
-</pre>
+<%= render partial: 'community', locals: { f: f } if @pin.type == 'Community' %>
+<%= render partial: 'enterprise', locals: { f: f } if @pin.type == 'Enterprise' %>
+
+<div class="form-group mt-5">
+  <%= f.submit t('views.shared.save'), class: 'btn btn-block btn-black' %>
+</div>
 <% end %>
 <% end %>
