Add the basic pin details dialog

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -66,6 +66,17 @@
 </div>
 <% end %>
 
+<div id="pin-details" class="dialog-container" aria-hidden="true">
+  <div tabindex="-1" hidden></div>
+  <div role="alertdialog" aria-label="<%= t("views.map.pin_details") %>" class="c-pin-details">
+    <div class="background-white">
+      <div class="container">
+        Hello world!
+      </div>
+    </div>
+  </div>
+</div>
+
 <div id="main" class="l-map">
   <div id="map" class="vw-100 vh-100"></div>
   <div class="position-absolute w-100" style="top: 0;">
