--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -69,9 +69,30 @@
 <div id="pin-details" class="dialog-container" aria-hidden="true">
   <div tabindex="-1" hidden></div>
   <div role="alertdialog" aria-label="<%= t("views.map.pin_details") %>" class="c-pin-details">
-    <div class="background-white">
+    <div class="py-4 background-white">
       <div class="container">
-        Hello world!
+        <strong class="d-block mb-2 js-name" hidden></strong>
+        <a class="mb-0 js-website" target="_blank" rel="noopener noreferrer" hidden></a>
+
+        <div class="mt-4 js-edit-group" hidden>
+          <div class="d-flex justify-content-between">
+            <a data-href="<%= edit_pin_path(':id') %>" class="btn btn-block btn-primary mr-3 js-edit">
+              <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" class="d-inline-block mr-1 align-middle">
+                <path d="M0 18h3.8l11-11.1L11 3.1 0 14.2V18zM17.7 2.6L15.4.3c-.4-.4-1-.4-1.4 0l-1.8 1.8L16 5.9 17.7 4c.4-.4.4-1 0-1.4z" fill="#222" fill-rule="evenodd" />
+              </svg>
+              <%= t('views.shared.edit') %>
+            </a>
+            <a data-href="<%= delete_pin_path(':id') %>" class="btn btn-block btn-black mt-0 js-edit">
+              <%= t('views.shared.delete') %>
+            </a>
+          </div>
+        </div>
+
+        <div class="mt-4 js-report-error-group" hidden>
+          <<%== user_signed_in? ? 'a data-href="' + edit_pin_path(':id') + '"' : 'button type="button" data-a11y-dialog-show="login-wall"' %> class="btn btn-block btn-black js-report-error">
+            <%= t('views.shared.report_error') %>
+            </<%= user_signed_in? ? 'a' : 'button' %>>
+        </div>
       </div>
     </div>
   </div>
