--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -8,8 +8,10 @@
 $primary: #f5cf00;
 $blackish: #111111;
 $grey-1: #888888;
+$grey-2: #d6d6d6;
 $danger: #ff331b;
 $blue-1: #0030ff;
+$blue-2: #005bff;
 
 $text-color-1: #222222;
 $text-color-2: $primary;
