Only show live pins for common users
Admins will see all the pins, non-approved with a different colour.

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -12,6 +12,7 @@ $grey-2: #d6d6d6;
 $danger: #ff331b;
 $blue-1: #0030ff;
 $blue-2: #005bff;
+$green-1: #00ab32;
 
 $text-color-1: #222222;
 $text-color-2: $primary;
