--- a/app/assets/stylesheets/components/_marker.scss
+++ b/app/assets/stylesheets/components/_marker.scss
@@ -99,4 +99,11 @@
       background: $primary;
     }
   }
+
+  &.marker-green {
+    &:not(.marker-community),
+    &.marker-community:after {
+      background: $green-1;
+    }
+  }
 }
