Let the users edit pins

--- a/app/views/pins/_enterprise.html.erb
+++ b/app/views/pins/_enterprise.html.erb
@@ -6,7 +6,7 @@
 
   <%= f.hidden_field :type %>
 
-  <%= f.hidden_field :enterprise_type, :multiple => true, class: 'js-enterprise-type-input' %>
+  <%= f.hidden_field :enterprise_types, class: 'js-enterprise-type-input' %>
 
   <div class="form-group">
     <label for="store_enterprise_type" class="required"><%= t('views.pins.enterprise_type') %></label>
