--- a/app/views/admin/stores/_form.html.erb
+++ b/app/views/admin/stores/_form.html.erb
@@ -6,7 +6,7 @@
     <%= form_with(model: store, url: admin_store_path(store), local: true) do |form| %>
     <% if store.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(store.errors.count, "error") %> impediram store de ser guardado:</h2>
+      <h2><%= pluralize(store.errors.count, "error") %> errors:</h2>
 
       <ul>
         <% store.errors.full_messages.each do |message| %>
@@ -34,11 +34,6 @@
       <div class="form-group col-md-6">
         <%= form.label :name, class: "col-sm-4 col-form-label" %>
         <%= form.text_field :name, class: "form-control" %>
-      </div>
-
-      <div class="form-group col-md-6">
-        <%= form.label :store_type, class: "col-sm-8 col-form-label" %>
-        <%= form.select :type, enum_options_for_select(Store, :type), {}, class: 'form-control' %>
       </div>
     </div>
 
