--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -3,15 +3,14 @@
 <div class="row mt-3">
   <div class="col-md-8">
     <span class="h2"><%= @store.name %></span>
-    <%= badge_for @store %>
   </div>
   <div class="col-md-4">
     <% if can? :edit, @store %>
-      <%= link_to t('views.actions.edit'), edit_store_path(@store),
+      <%= link_to t('views.actions.edit'), edit_admin_store_path(@store),
         class: 'btn btn-sm btn-outline-primary' %>
     <% end %>
     <% if can? :destroy, @store %>
-      <%= link_to t('views.actions.destroy'), store_path(@store),
+      <%= link_to t('views.actions.destroy'), admin_store_path(@store),
         method: :delete, data: { confirm: t('views.actions.confirm_destroy') },
         class: 'btn btn-sm btn-outline-danger' %>
     <% end %>
@@ -27,38 +26,17 @@
           <%= @store.name %>
         </p>
         <p>
-          <strong><%= Store.human_attribute_name(:group) %>:</strong>
-          <%= link_to(@store.group, stores_path(group: @store.group)) if @store.group.present? %>
+          <strong><%= Store.human_attribute_name(:type) %>:</strong>
+          <%= link_to enum_i18n(Store, :type, @store.type), admin_stores_path(type: @store.type) %>
         </p>
         <p>
-          <strong><%= Store.human_attribute_name(:store_type) %>:</strong>
-          <%= link_to enum_l(@store, :store_type), stores_path(store_type: @store.store_type) %>
+        <strong><%= Store.human_attribute_name(:created_by) %>:</strong>
+          <%= link_to(@store.created_by.display_name, admin_user_path(@store.created_by)) if @store.created_by %>
         </p>
-        <% if current_user&.admin? %>
-          <p>
-          <strong><%= Store.human_attribute_name(:created_by) %>:</strong>
-            <%= link_to(@store.created_by.display_name, @store.created_by) if @store.created_by %>
-          </p>
-          <p>
-            <strong><%= Store.human_attribute_name(:updated_by) %>:</strong>
-            <%= link_to(@store.updated_by.display_name, @store.updated_by) if @store.updated_by %>
-          </p>
-        <% end %>
-        <% if current_user&.admin? || (current_user.store_owner? && current_user.stores.include?(@store)) %>
-          <p><strong><%= t('activerecord.enums.user.roles.store_owner') %></strong><br>
-            <ul>
-              <% @store.managers.each do |user| %>
-                <li>
-                  <% if current_user.admin? %>
-                    <%= link_to user.display_name, user %>
-                  <% else %>
-                    <%= user.display_name %>
-                  <% end %>
-                </li>
-              <% end %>
-            </ul>
-          </p>
-        <% end %>
+        <p>
+          <strong><%= Store.human_attribute_name(:updated_by) %>:</strong>
+          <%= link_to(@store.updated_by.display_name, admin_user_path(@store.updated_by)) if @store.updated_by %>
+        </p>
       </div>
     </div>
   </div>
@@ -67,36 +45,8 @@
     <div class="card">
       <div class="card-body">
         <p>
-          <strong><%= Store.human_attribute_name(:street) %>:</strong>
-          <%= @store.street %>
-        </p>
-        <p>
-          <strong><%= Store.human_attribute_name(:zip_code) %>:</strong>
-          <%= @store.zip_code %>
-        </p>
-        <p>
-          <strong><%= Store.human_attribute_name(:city) %>:</strong>
-          <%= @store.city %>
-        </p>
-        <p>
-          <strong><%= Store.human_attribute_name(:district) %>:</strong>
-          <%= @store.district %>
-        </p>
-        <p>
-          <strong><%= Store.human_attribute_name(:country) %>:</strong>
-          <%= @store.country %>
-        </p>
-        <p>
           <strong><%= t('views.stores.index.coordinates') %>:</strong>
           <%= [@store.latitude, @store.longitude].compact.join(', ') %>
-        </p>
-        <p>
-          <strong><%= Store.human_attribute_name(:capacity) %>:</strong>
-          <%= @store.capacity %>
-        </p>
-        <p>
-          <strong><%= Store.human_attribute_name(:details) %>:</strong>
-          <%= @store.details %>
         </p>
       </div>
     </div>
