--- a/app/views/admin/stores/_table.html.erb
+++ b/app/views/admin/stores/_table.html.erb
@@ -29,16 +29,26 @@
         <td><%= store.latitude&.round(3) %></td>
         <td><%= store.longitude&.round(3) %></td>
         <td>
-          <%= link_to t('views.actions.show'), admin_store_path(store) %>
+          <% if store.state.eql? 'waiting_approval' %>
+            <%= link_to t('views.shared.approve'), approve_admin_store_path(store), method: :put,
+                        data: {confirm: t('views.stores.index.confirm_approval')} %>
+            |
+          <% end %>
+          <% if store.state.eql? 'to_replace' %>
+            <%= link_to t('views.shared.replace'), approve_admin_store_path(store), method: :post,
+                        data: {confirm: t('views.stores.index.confirm_replace')}%>
+            |
+          <% end %>
+          <%= link_to t('views.shared.show'), admin_store_path(store) %>
           |
-          <%= link_to t('views.actions.edit'), edit_admin_store_path(store) %>
+          <%= link_to t('views.shared.edit'), edit_admin_store_path(store) %>
           <% if can? :destroy, store %>
           |
-          <%= link_to t('views.actions.destroy'),
+          <%= link_to t('views.shared.destroy'),
                 admin_store_path(store, state: params[:state], group: params[:group],
                                  search: params[:search], country: params[:country],
                                  type: params[:type]), method: :delete,
-                                 data: { confirm: t('views.actions.confirm_destroy') } %>
+                                 data: { confirm: t('views.shared.confirm_destroy') } %>
           <% end %>
         </td>
       </tr>
