Improve the admin store show page

--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -9,15 +9,15 @@
 <%= form_tag admin_stores_path, method: :get do %>
 <div class="form-group">
   <%= label_tag :state, t('views.admin.stores.state'), class: 'sr-only' %>
-  <%= select_tag :state, options_for_select(enum_options_for_select(Store, :state), params[:state]), {include_blank: t('views.stores.search.filter_state'), class: 'custom-select' }%>
+  <%= select_tag :state, options_for_select(enum_options_for_select(Store, :state), params[:state]), { include_blank: t('views.admin.stores.all_states'), class: 'custom-select' }%>
 </div>
 <div class="form-group">
   <%= label_tag :type, t('views.shared.type'), class: 'sr-only' %>
-  <%= select_tag :type, options_for_select([[t('views.pins.type_community'), 'Community'], [t('views.pins.type_business'), 'Enterprise']], params[:type]), {include_blank: t('views.stores.search.filter_store_type'), class: 'custom-select'} %>
+  <%= select_tag :type, options_for_select([[t('views.pins.type_community'), 'Community'], [t('views.pins.type_business'), 'Enterprise']], params[:type]), { include_blank: t('views.admin.stores.all_types'), class: 'custom-select'} %>
 </div>
 <div class="form-group">
   <%= label_tag :search, t('views.shared.search'), class: 'sr-only' %>
-  <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: t('views.admin.stores.search_placeholder') %>
+  <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: t('views.admin.stores.search_by_name') %>
 </div>
 <div class="form-group">
   <%= submit_tag t('views.shared.search'), class: 'btn btn-black' %>
