--- a/app/views/admin/stores/_table.html.erb
+++ b/app/views/admin/stores/_table.html.erb
@@ -30,25 +30,15 @@
         <td><%= store.longitude&.round(3) %></td>
         <td>
           <% if store.state.eql? 'waiting_approval' %>
-            <%= link_to t('views.shared.approve'), approve_admin_store_path(store), method: :put,
-                        data: {confirm: t('views.stores.index.confirm_approval')} %>
-            |
+          <%= link_to t('views.shared.approve'), approve_admin_store_path(store), method: :put, class: 'btn btn-block btn-sm btn-black' %>
+          <% elsif store.state.eql? 'to_replace' %>
+          <%= link_to t('views.shared.approve'), approve_admin_store_path(store), method: :post, class: 'btn btn-block btn-sm btn-black' %>
+          <% else %>
+          <%= link_to t('views.shared.edit'), edit_admin_store_path(store), class: 'btn btn-block btn-sm btn-black' %>
           <% end %>
-          <% if store.state.eql? 'to_replace' %>
-            <%= link_to t('views.shared.replace'), approve_admin_store_path(store), method: :post,
-                        data: {confirm: t('views.stores.index.confirm_replace')}%>
-            |
-          <% end %>
-          <%= link_to t('views.shared.show'), admin_store_path(store) %>
-          |
-          <%= link_to t('views.shared.edit'), edit_admin_store_path(store) %>
+
           <% if can? :destroy, store %>
-          |
-          <%= link_to t('views.shared.destroy'),
-                admin_store_path(store, state: params[:state], group: params[:group],
-                                 search: params[:search], country: params[:country],
-                                 type: params[:type]), method: :delete,
-                                 data: { confirm: t('views.shared.confirm_destroy') } %>
+          <%= link_to t('views.shared.delete'), admin_store_path(store, state: params[:state], search: params[:search], type: params[:type]), method: :delete, class: 'btn btn-block btn-sm btn-danger mt-2' %>
           <% end %>
         </td>
       </tr>
