--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title><%= [yield(:page_title).presence, t('views.layout.application.title')].compact.join(' | ') %></title>
+  <%= javascript_pack_tag "application", defer: true %>
   <%= stylesheet_link_tag "application", media: "all" %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
