--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,6 +44,6 @@
 </div>
 
 <div class="form-group mt-5">
-  <%= link_to t('views.devise.registrations.close_account'), close_user_registration_path, class: 'btn btn-block btn-danger' %>
+  <%= link_to t('views.devise.registrations.close_account'), registration_path(current_user), method: :delete, data: { confirm: t('views.devise.registrations.close_account_confirmation') }, class: 'btn btn-block btn-danger' %>
 </div>
 <% end %>
