--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="row mt-4">
   <div class="col-md-12">
-    <%= form_with(model: user, local: true) do |form| %>
+    <%= form_with(model: user, url: admin_user_path(user), local: true) do |form| %>
       <% if user.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(user.errors.count, "error") %> impediram user de ser guardado:</h2>
+          <h2><%= pluralize(user.errors.count, "error") %> errors:</h2>
 
           <ul>
             <% user.errors.full_messages.each do |message| %>
@@ -32,15 +32,6 @@
         <div class="form-group">
           <%= form.label :role, class: "col-sm-2 col-form-label" %><br />
           <%= enum_l(form.object, :role) %>
-        </div>
-      <% end %>
-
-      <% if current_user.admin? || current_user.general_manager? %>
-        <div class="form-group">
-          <%= form.label :store_ids, value: Store.model_name.human(count: 2),
-            class: "col-sm-2 col-form-label" %>
-          <%= form.select :store_ids, @user.stores&.collect{|s| [s.text, s.id]}, {},
-            {class: "form-control store-managers-select", multiple: true} %>
         </div>
       <% end %>
 
