--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -5,7 +5,7 @@
     <h1><%= "#{t('views.actions.edit')} #{User.model_name.human(count: 1)}" %></h1>
   </div>
   <div class="col-md-1">
-    <%= link_to t('views.actions.show'), @user,
+    <%= link_to t('views.actions.show'), admin_user_path(@user),
       class: 'btn btn-sm btn-outline-primary' %>
   </div>
 </div>
