--- a/app/views/admin/stores/_form.html.erb
+++ b/app/views/admin/stores/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="alert alert-warning">
       <%= t('views.stores.form.info_deleting') %>
     </div>
-    <%= form_with(model: store, url: admin_store_path(store), local: true) do |form| %>
+    <%= form_with(model: store, url: admin_pin_path(store), local: true) do |form| %>
     <% if store.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(store.errors.count, "error") %> errors:</h2>
