--- a/app/views/admin/stores/edit.html.erb
+++ b/app/views/admin/stores/edit.html.erb
@@ -5,7 +5,7 @@
     <h1><%= "#{t('views.shared.edit')} #{Store.model_name.human(count: 1)}" %></h1>
   </div>
   <div class="col-md-1">
-    <%= link_to t('views.shared.show'), admin_store_path(@store),
+    <%= link_to t('views.shared.show'), admin_pin_path(@store),
       class: 'btn btn-sm btn-outline-primary' %>
   </div>
 </div>
