--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -3,10 +3,10 @@
 <% end %>
 
 <% content_for :title_options do %>
-<%= link_to t('views.shared.download'), admin_stores_path(search: params[:search], type: params[:type], state: params[:state], format: 'csv'), class: 'btn btn-primary' %>
+<%= link_to t('views.shared.download'), admin_pins_path(search: params[:search], type: params[:type], state: params[:state], format: 'csv'), class: 'btn btn-primary' %>
 <% end %>
 
-<%= form_tag admin_stores_path, method: :get do %>
+<%= form_tag admin_pins_path, method: :get do %>
 <div class="form-group">
   <%= label_tag :state, t('views.admin.stores.state'), class: 'sr-only' %>
   <%= select_tag :state, options_for_select(enum_options_for_select(Store, :state), params[:state]), { include_blank: t('views.admin.stores.all_states'), class: 'custom-select' }%>
