--- a/app/views/admin/stores/_table.html.erb
+++ b/app/views/admin/stores/_table.html.erb
@@ -30,7 +30,7 @@
         <td><%= store.longitude&.round(3) %></td>
         <td>
           <% if store.state.eql? 'waiting_approval' %>
-          <%= link_to t('views.shared.approve'), approve_admin_pin_path(store), method: :put, class: 'btn btn-block btn-sm btn-black' %>
+          <%= link_to t('views.shared.approve'), approve_admin_pin_path(store), method: :post, class: 'btn btn-block btn-sm btn-black' %>
           <% elsif store.state.eql? 'to_replace' %>
           <%= link_to t('views.shared.approve'), approve_admin_pin_path(store), method: :post, class: 'btn btn-block btn-sm btn-black' %>
           <% else %>
