--- a/app/views/pins/_community.html.erb
+++ b/app/views/pins/_community.html.erb
@@ -26,7 +26,7 @@
     <%= f.select :population_size, Community.population_sizes.map { |key, value| [key.humanize, key] }, {}, class: 'custom-select' %>
   </div>
 
-  <% if action?('editing') || action?('creating') %>
+  <% if (action?('editing') && @pin.related_store_id.nil?) || action?('creating') %>
   <div class="form-group mt-4">
     <div class="custom-control custom-checkbox">
       <%= f.check_box :user_is_owner, class: 'custom-control-input' %>
