--- a/app/views/pins/_enterprise.html.erb
+++ b/app/views/pins/_enterprise.html.erb
@@ -60,7 +60,7 @@
     <%= f.number_field :longitude, required: true, min: -180, max: 180, step: 0.0001, class: 'form-control' %>
   </div>
 
-  <% if action?('editing') || action?('creating') %>
+  <% if (action?('editing') && @pin.related_store_id.nil?) || action?('creating') %>
   <div class="form-group mt-4">
     <div class="custom-control custom-checkbox">
       <%= f.check_box :user_is_owner, class: 'custom-control-input' %>
