Display the status of the pins for logged in users

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -75,7 +75,8 @@
   <div role="alertdialog" aria-label="<%= t("views.map.pin_details") %>" class="c-pin-details">
     <div class="py-4 background-white box-shadow-white">
       <div class="container">
-        <strong class="d-block mb-2 js-name"></strong>
+        <strong class="d-block js-name"></strong>
+        <p class="mb-2 font-s js-status"></p>
         <a class="mb-0 js-website" target="_blank" rel="noopener noreferrer" hidden></a>
 
         <div class="mt-4 js-edit-group" hidden>
