--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -75,7 +75,7 @@
 
 <div id="pin-details" class="dialog-container" aria-hidden="true">
   <div tabindex="-1" hidden></div>
-  <div role="alertdialog" aria-label="<%= t("views.map.pin_details") %>" class="c-pin-details">
+  <div role="alertdialog" aria-label="<%= t("views.shared.pin_details") %>" class="c-pin-details">
     <div class="py-4 background-white box-shadow-white">
       <div class="container">
         <strong class="d-block js-name"></strong>
