--- a/app/views/admin/stores/_enterprise.html.erb
+++ b/app/views/admin/stores/_enterprise.html.erb
@@ -60,6 +60,7 @@
     <%= f.number_field :longitude, required: true, disabled: action_name == 'show', min: -180, max: 180, step: 0.0001, class: 'form-control' %>
   </div>
 
+  <% if (@store.related_store_id.nil?) %>
   <div class="form-group mt-4">
     <div class="custom-control custom-checkbox">
       <%= f.check_box :user_is_owner, disabled: action_name == 'show', class: 'custom-control-input' %>
@@ -71,4 +72,5 @@
     <%= f.label :owner_details, t('views.pins.owner_recommendation') %>
     <%= f.text_area :owner_details, disabled: action_name == 'show', class: 'form-control' %>
   </div>
+  <% end %>
 </div>
