--- a/app/views/admin/stores/_table.html.erb
+++ b/app/views/admin/stores/_table.html.erb
@@ -32,7 +32,7 @@
           <% if store.state.eql? 'waiting_approval' %>
           <%= link_to t('views.shared.approve'), approve_admin_pin_path(store), method: :post, class: 'btn btn-block btn-sm btn-black' %>
           <% elsif store.state.eql? 'to_replace' %>
-          <%= link_to t('views.shared.approve'), approve_admin_pin_path(store), method: :post, class: 'btn btn-block btn-sm btn-black' %>
+          <%= link_to t('views.shared.review'), admin_pin_path(store), class: 'btn btn-block btn-sm btn-black' %>
           <% else %>
           <%= link_to t('views.shared.edit'), edit_admin_pin_path(store), class: 'btn btn-block btn-sm btn-black' %>
           <% end %>
