--- a/app/views/admin/stores/_community.html.erb
+++ b/app/views/admin/stores/_community.html.erb
@@ -1,29 +1,54 @@
 <div class="form-group">
   <div class="form-group">
     <%= f.label :name, t('views.pins.community_name'), class: 'required' %>
-    <%= f.text_field :name, required: true, disabled: action_name == 'show', autofocus: true, class: 'form-control' %>
+    <%= f.text_field :name, required: true, disabled: action_name == 'show', 'aria-describedby': 'name_related_pin', autofocus: true, class: 'form-control' %>
+    <% if !@related_store.nil? && !@store.name.eql?(@related_store.name) %>
+    <div id="name_related_pin" class="form-text font-s">
+      <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.name %></strong>
+    </div>
+    <% end%>
   </div>
 
   <%= f.hidden_field :type %>
 
   <div class="form-group">
     <%= f.label :website %>
-    <%= f.url_field :website, disabled: action_name == 'show', class: 'form-control' %>
+    <%= f.url_field :website, disabled: action_name == 'show', 'aria-describedby': 'website_related_pin', class: 'form-control' %>
+    <% if !@related_store.nil? && !@store.website.eql?(@related_store.website) %>
+    <div id="website_related_pin" class="form-text font-s">
+      <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.website %></strong>
+    </div>
+    <% end%>
   </div>
 
   <div class="form-group">
     <%= f.label :latitude, class: 'required' %>
-    <%= f.number_field :latitude, required: true, disabled: action_name == 'show', min: -90, max: 90, step: 0.0001, class: 'form-control' %>
+    <%= f.number_field :latitude, required: true, disabled: action_name == 'show', 'aria-describedby': 'latitude_related_pin', min: -90, max: 90, step: 0.0001, class: 'form-control' %>
+    <% if !@related_store.nil? && !@store.latitude.eql?(@related_store.latitude) %>
+    <div id="latitude_related_pin" class="form-text font-s">
+      <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.latitude %></strong>
+    </div>
+    <% end%>
   </div>
 
   <div class="form-group">
     <%= f.label :longitude, class: 'required' %>
-    <%= f.number_field :longitude, required: true, disabled: action_name == 'show', min: -180, max: 180, step: 0.0001, class: 'form-control' %>
+    <%= f.number_field :longitude, required: true, disabled: action_name == 'show', 'aria-describedby': 'longitude_related_pin', min: -180, max: 180, step: 0.0001, class: 'form-control' %>
+    <% if !@related_store.nil? && !@store.longitude.eql?(@related_store.longitude) %>
+    <div id="longitude_related_pin" class="form-text font-s">
+      <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.longitude %></strong>
+    </div>
+    <% end%>
   </div>
 
   <div class="form-group">
     <%= f.label :population_size, t('views.pins.population_size') %>
-    <%= f.select :population_size, Community.population_sizes.map { |key, value| [key.humanize, key] }, {}, disabled: action_name == 'show', class: 'custom-select' %>
+    <%= f.select :population_size, Community.population_sizes.map { |key, value| [key.humanize, key] }, {}, disabled: action_name == 'show', 'aria-describedby': 'population_size_related_pin', class: 'custom-select' %>
+    <% if !@related_store.nil? && !@store.population_size.eql?(@related_store.population_size) %>
+    <div id="population_size_related_pin" class="form-text font-s">
+      <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.population_size %></strong>
+    </div>
+    <% end%>
   </div>
 
   <% if (@store.related_store_id.nil?) %>
