Let regular users update coordinates through a map

--- a/app/views/layouts/pins.html.erb
+++ b/app/views/layouts/pins.html.erb
@@ -9,6 +9,7 @@
   <%= stylesheet_link_tag "application", media: "all" %>
   <%= javascript_pack_tag "application", defer: true %>
   <%= javascript_pack_tag "pins", defer: true %>
+  <%= stylesheet_link_tag stylesheet_path("map") %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 </head>
