--- a/app/views/pins/_community.html.erb
+++ b/app/views/pins/_community.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :name, required: true, autofocus: true, class: 'form-control' %>
   </div>
 
-  <%= f.hidden_field :type %>
+  <%= f.hidden_field :type, class: 'js-type-input' %>
 
   <div class="form-group">
     <%= f.label :website %>
@@ -13,13 +13,22 @@
 
   <div class="form-group">
     <%= f.label :latitude, class: 'required' %>
-    <%= f.number_field :latitude, required: true, min: -90, max: 90, step: 0.0001, class: 'form-control' %>
+    <%= f.number_field :latitude, required: true, min: -90, max: 90, step: 0.0001, class: 'form-control js-latitude-input' %>
   </div>
 
   <div class="form-group">
     <%= f.label :longitude, class: 'required' %>
-    <%= f.number_field :longitude, required: true, min: -180, max: 180, step: 0.0001, class: 'form-control' %>
+    <%= f.number_field :longitude, required: true, min: -180, max: 180, step: 0.0001, class: 'form-control js-longitude-input' %>
   </div>
+
+  <% if action?('editing') || action?('fixing') %>
+  <div class="form-group">
+    <div id="map" class="c-map-field js-map-field"></div>
+    <p class="mb-0 form-text font-s">
+      <%= t('views.shared.click_map_to_update') %>
+    </p>
+  </div>
+  <% end %>
 
   <div class="form-group">
     <%= f.label :population_size, t('views.pins.population_size') %>
