--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,6 +9,7 @@
   <%= javascript_pack_tag "application", defer: true %>
   <%= javascript_pack_tag "admin", defer: true %>
   <%= stylesheet_link_tag "application", media: "all" %>
+  <%= stylesheet_link_tag stylesheet_path("map") %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 </head>
