Update the homepage logo and intro

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,11 @@
       <div class="background-black py-4 flex-shrink-0">
         <div class="container">
           <h1 class="mt-0 mb-4 font-base text-center">
-            <%= t('views.layout.application.title') %>
+            <%= image_tag 'logo.png', alt: t('views.layout.application.title') %>
           </h1>
+          <p class="font-s text-uppercase">
+            <%== t('views.layout.application.subtitle') %>
+          </p>
           <p class="font-s">
             <%= t('views.home.index.intro') %>
           </p>
